--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
     <string name="ean_start">978</string>
     <string name="book_detail">Book Detail</string>
+    <string name="network_not_available">Sorry, this action requires network connection</string>
 </resources>
